// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test the component Empty carousel 1`] = `
<div>
  <div>
    Gimme some children
  </div>
</div>
`;

exports[`Test the component With some children 1`] = `
<div>
  <div
    style="width: 40px; height: 40px;"
  />
</div>
`;
